finished css draft

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <div class="siteMargin">
             <div class="firstBody">
                 <div class="firstLeft">
-                    <h1>This website is awesome</h1>
+                    <h1>This website is <br> awesome</h1>
                     <p>This website has some subtext that goes here under the main title. it's smaller font and the color is lower contrast</p>
-                    <button>Sign up</button>
+                    <button class="button">Sign up</button>
                 </div>  
                 <div class="firstRight">
                     <img src="img/temp.png" alt="This is a placeholder for an image">
@@ -38,49 +38,57 @@
     </div>
     <div class="second">
         <div class="siteMargin">
-            <h2>Some Random Info</h2>
-            <div>
-                <div class="one">
-                    <img src="" alt="">
-                    <p>this is some subtext under an illustration or image</p>
-                </div>
-                <div class="two">
-                    <img src="" alt="">
-                    <p>this is some subtext under an illustration or image</p>
-                </div>
-                <div class="three">
-                    <img src="" alt="">
-                    <p>this is some subtext under an illustration or image</p>
-                </div>
-                <div class="four">
-                    <img src="" alt="">
-                    <p>this is some subtext under an illustration or image</p>
+            <div class="secondBody">
+                <h2>Some Random Info</h2>
+                <div class="column">
+                    <div class="one">
+                        <img src="" alt="">
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
+                    <div class="one">
+                        <img src="" alt="">
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
+                    <div class="one">
+                        <img src="" alt="">
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
+                    <div class="one">
+                        <img src="" alt="">
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
     <div class="third">
         <div class="siteMargin">
-            <p>Manifesting true and genuine love. A love that's patient and a love that is kind.</p>
-            <p>-Wyeth, hopeless romantic</p>
+            <div class="thirdBody">
+                <p class="quote">Manifesting true and genuine love. A love that's patient and a love that is kind.</p>
+                <p class="author">-Wyeth, hopeless romantic</p>
+            </div>
         </div>  
     </div>
     <div class="four">
         <div class="siteMargin">
-            <div class="blue">
-                <div>
-                    <h5>Call to action! It's time!</h5>
-                    <p>Sign up for our product by clicking that button over there</p>
-                </div>
-                <div>
-                    <button>Sign up</button>
+            <div class="fourBody">
+                <div class="blue">
+                    <div>
+                        <h5 class="call">Call to action! It's time!</h5>
+                        <p class="signup">Sign up for our product by clicking that button over there</p>
+                    </div>
+                    <div>
+                        <button class="signButton">Sign up</button>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
     <div class="footer">
         <div class="siteMargin">
-            <p>Copyright $ The Wyeth Project 2024</p>
+            <div class="footerBody">
+                <p>Copyright $ The Wyeth Project 2024</p>
+            </div>  
         </div>
     </div>
 
